--- a/css/main.css
+++ b/css/main.css
@@ -109,9 +109,9 @@ header .sub-menu ul.menu li::before {
     height: 12px;
     background-color: #e5e5e5;
     position: absolute;
-   top: 0;
-   bottom: 0;
-   margin: auto 0;
+    top: 0;
+    bottom: 0;
+    margin: auto 0;
 }
 header .sub-menu ul.menu li:first-child:before {
     display: none;
@@ -225,6 +225,8 @@ header .main-menu .item .item__contents .contents__texture p{
     color: #669900;
     margin: 4px 0 14px;
 }
+
+/*BADGES*/
 header .badges {
     position: absolute;
     top: 132px;
@@ -315,6 +317,7 @@ header .badges .badge {
 .notice .notice-line .inner {
     height: 62px;
     display: flex;
+    z-index: 1;
 }
 .notice .notice-line .inner__left {
     width: 60%;
@@ -331,8 +334,15 @@ header .badges .badge {
 }
 .notice .notice-line .inner__left .swiper-container {
     height: 62px;
-    background-color: orange;
     flex-grow: 1;
+}
+.notice .notice-line .inner__left .swiper-slide {
+    height: 62px;
+    display: flex;
+    align-items: center;
+}
+.notice .notice-line .inner__left .swiper-slide a {
+    color: #fff;
 }
 .notice .notice-line .inner__left .notice-line__more {
     width: 62px;
@@ -356,7 +366,6 @@ header .badges .badge {
     font-size: 17px;
     font-size: 700;
 }
-
 /* 버튼 역활 구간 스타일 설정*/
 .notice .notice-line .inner__right .toggle-promotion {
     width: 62px;
@@ -369,4 +378,20 @@ header .badges .badge {
 
 .notice .notice-line .inner__right .toggle-promotion .material-icons {
     font-size: 30px;
+}
+.notice .promotion {
+    height: 693px;
+    background-color: #f6f5ef;
+    position: relative;
+}
+.notice .promotion .swiper-container {
+    width: calc(819px * 3 + 20px);
+    height: 553px;
+    background-color: orange;
+    text-align: center;
+    font-size: 200px;
+    position: absolute;
+    top: 40px;
+    left: 50%;
+    margin-left: calc((819px * 3 + 20px) / -2);
 }
