--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,6 @@ body {
     font-weight: 400;
     line-height: 1.4;
     font-family: 'Nanum Gothic', sans-serif;
-    height: 6000px;
 }
 img {
     display: block;
@@ -67,6 +66,34 @@ a {
 .btn.btn--white:hover {
     background-color: #fff;
     color: #333;
+}
+
+.back-to-position {
+    opacity: 0;
+    transition: 1s;
+}
+.back-to-position.to-right {
+    transform: translateX(-150px);
+}
+.back-to-position.to-left {
+    transform: translateX(150px);
+}
+.show .back-to-position {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+.show .back-to-position.delay-0 {
+    transition-delay: 0s;
+}
+.show .back-to-position.delay-1 {
+    transition-delay: .3s;
+}
+.show .back-to-position.delay-2 {
+    transition-delay: .6s;
+}
+.show .back-to-position.delay-3 {
+    transition-delay: .9s;
 }
 
 /* HEADER */
@@ -508,6 +535,8 @@ header .badges .badge {
     margin-top: 10px;
     flex-grow: 1;
 }
+
+/* YOUTUBE */
 .youtube {
     position: relative;
     height: 700px;
@@ -696,20 +725,165 @@ header .badges .badge {
     left: 400px
 }
 .find-store .texture2 {
-
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+.find-store .picture{
+    position: absolute;
+    border-radius: 50%;
+    box-shadow: 2px 2px 8px rgba(0,0,0,.5);
 }
 .find-store .picture1 {
-
+    top: -60px;
+    left: 0;
 }
 .find-store .picture2 {
-
+    top: 150px;
+    left: 250px;
 }
 .find-store .text-group {
-    
+    position: absolute;
+    top: 120px;
+    left: 550px;
 }
 .find-store .text-group .title{
-
+    margin-bottom: 20px;
 }
 .find-store .text-group .description{
-
+    margin-bottom: 20px;
 }
+
+/*AWARDS*/
+.awards {
+    background-color: #272727;
+  }
+  .awards .inner {
+    padding: 40px 0;
+  }
+  .awards .swiper-container {
+    width: 100%;
+    height: 40px;
+  }
+  .awards .swiper-prev,
+  .awards .swiper-next {
+    width: 42px;
+    height: 42px;
+    outline: none;
+    border: 2px solid #fff;
+    border-radius: 50%;
+    color: #fff;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    margin: auto;
+    opacity: .3;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: .4s;
+  }
+  .awards .swiper-prev {
+    left: -100px;
+  }
+  .awards .swiper-next {
+    right: -100px;
+  }
+  .awards .swiper-prev:hover,
+  .awards .swiper-next:hover {
+    background-color: #fff;
+    color: #333;
+  }
+
+
+  /*FOOTER*/
+footer {
+    background-color: #272727;
+    border-top: 1px solid #333;
+  }
+  footer .inner {
+    padding: 40px 0 60px 0;
+  }
+  footer .menu {
+    display: flex;
+    justify-content: center;
+  }
+  footer .menu li {
+    position: relative;
+  }
+  footer .menu li::before {
+    content: "";
+    width: 3px;
+    height: 3px;
+    background-color: #555;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: -1px;
+    margin: auto;
+  }
+  footer .menu li:last-child::before {
+    display: none;
+  }
+  footer .menu li a {
+    display: block;
+    color: #CCC;
+    font-size: 12px;
+    font-weight: 700;
+    padding: 15px;
+  }
+  footer .menu li a.green {
+    color: #669900;
+  }
+  footer .btn-group {
+    margin-top: 20px;
+    display: flex;
+    justify-content: center;
+  }
+  footer .btn-group .btn {
+    font-size: 12px;
+    margin-right: 10px;
+  }
+  footer .btn-group .btn:last-child {
+    margin-right: 0;
+  }
+  footer .info {
+    margin-top: 30px;
+    text-align: center;
+  }
+  footer .info span {
+    margin-right: 20px;
+    color: #999;
+    font-size: 12px;
+  }
+  footer .info span:last-child {
+    margin-right: 0;
+  }
+  footer .copyright {
+    color: #999;
+    font-size: 12px;
+    text-align: center;
+    margin-top: 12px;
+  }
+  footer .logo {
+    margin: 30px auto 0;
+  }
+
+  /*SCROLL TO TOP*/
+#to-top {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 9;
+    width: 42px;
+    height: 42px;
+    background-color: #333;
+    color: #fff;
+    border: 2px solid #fff;
+    border-radius: 10px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
